ECP.ApiGateway/k8s/prod/1.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecp-prod
  labels:
    app.kubernetes.io/name: ecp
    environment: production
