ECP.ApiGateway/k8s/prod/3.api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: ecp-prod
  
spec:
  replicas: 3
  revisionHistoryLimit: 5
  
  selector:
    matchLabels:
      app: api-gateway
  
  strategy: 
    type: RollingUpdate 
    rollingUpdate: 
      maxUnavailable: 0 
      maxSurge: 1
      
  template:
    metadata:
      labels:
        app: api-gateway
        
    spec:
      terminationGracePeriodSeconds: 30
      
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: api-gateway
                

      containers:
        - name: api-gateway
          image: devkhim/ecp.apigateway:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources: 
            requests:
              cpu: "100m" 
              memory: "128Mi"
            
            limits: 
              cpu: "500m" 
              memory: "512Mi"
                                                                                 
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
              
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
              
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
                  
          volumeMounts:
            - name: tmp
              mountPath: /tmp
        
      volumes: 
        - name: tmp 
          emptyDir: {}
              
              
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: ecp-prod
  
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 8080
