ECP.ApiGateway/k8s/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: ecp-prod
spec:
  ingressClassName: nginx
  rules:
    - host: api-gateway.ecp.prod
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
